--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -7,13 +7,24 @@ env:
 jobs:
   build-windows:
     runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - name: Editor build
+            target: release_debug
+            tools: true
+          - name: Template build
+            target: release
+            tools: false
+            sconsflags: debug_symbols=no
     steps:
       # Setup python
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: "3.x"
-          python-arch: "x64"
+          architecture: "x64"
       # Install scons
       - name: Setup scons
         shell: bash
@@ -22,8 +33,8 @@ jobs:
           python -m pip install scons
           scons --version
     
-      - name: Build editor
-        uses: actions/checkout@master
+      - name: Clone godot
+        uses: actions/checkout@v2
         with:
           name: godotengine/godot
           ref: refs/heads/master
