--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -54,7 +54,7 @@ jobs:
         uses: actions/cache@v2
         continue-on-error: true
         with:
-          path: ${{ github.workspace }}/.scons-cache
+          path: ".scons-cache"
           key: ${{matrix.name}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}-${{github.sha}}
           restore-keys: |
             ${{matrix.name}}-${{env.GODOT_BASE_BRANCH}}-${{github.ref}}-${{github.sha}}
@@ -64,7 +64,7 @@ jobs:
       - name: Compile godot
         shell: bash
         env: |
-          SCONS_CACHE: "${{ github.workspace }}/.scons-cache/"
+          SCONS_CACHE: ".scons-cache/"
           SCONS_CACHE_LIMIT: 3072
         run:  |
           scons -j2 p=windows target=${{ matrix.target }} tools=${{ matrix.tools }}
