--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -71,8 +71,11 @@ jobs:
       - name: Compile godot
         shell: bash
         env: |
-          
           SCONS_CACHE_LIMIT: 3072
         run:  |
           scons -j2 p=windows target=${{ matrix.target }} tools=${{ matrix.tools }}
           dir -l bin
+      - name: test2
+        shell: bash
+        run:  |
+          dir -la
