--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -3,6 +3,8 @@ on: [push, pull_request]
 
 env:
   GODOT_BASE_BRANCH: master
+  SCONS_CACHE: "${{github.workspace}}/.scons-cache/"
+  SCONS_CACHE_LIMIT: 3072
   SCONS_CACHE_MSVC_CONFIG: true
 
 jobs:
@@ -70,8 +72,6 @@ jobs:
       
       - name: Compile godot
         shell: bash
-        env: |
-          SCONS_CACHE_LIMIT: 3072
         run:  |
           scons -j2 p=windows target=${{ matrix.target }} tools=${{ matrix.tools }}
           dir -l bin
